--- a/WpfApp1223/WpfApp1223/WpfApp1223.csproj
+++ b/WpfApp1223/WpfApp1223/WpfApp1223.csproj
@@ -122,7 +122,8 @@
     <Resource Include="bin\Debug\pizza.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\DanyaPhoto.jpg" />
+    <Content Include="bin\Debug\DanyaPhoto.jpg" />
+    <Resource Include="Images\DanyaPhoto.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
