--- a/WpfApp1223/WpfApp1223/WpfApp1223.csproj
+++ b/WpfApp1223/WpfApp1223/WpfApp1223.csproj
@@ -61,6 +61,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MB.xaml.cs">
+      <DependentUpon>MB.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VideoWindow.xaml.cs">
       <DependentUpon>VideoWindow.xaml</DependentUpon>
     </Compile>
@@ -80,6 +83,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MB.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="VideoWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -123,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\DanyaPhoto.jpg" />
+    <None Include="Images\Аполлон.png" />
     <Resource Include="Images\DanyaPhoto.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
